# servifai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
changelog.d/: 20230630_065905_zohebabai.rst
examples/qna_local_docs/: README.md
examples/qna_local_docs/configs/: uber10q.yaml
servifai/: __init__.py  default_config.yaml  servifai.py
servifai/agents/: react.py
servifai/llm/: __init__.py  base.py  openai.py
servifai/llms/: openai.py
servifai/memory/: __init__.py  chroma.py
servifai/planning/: __init__.py  react.py
servifai/toolbox/: __init__.py  base.py  default.py  knowledge_base.py
servifai/tools/: knowledge_base.py
